testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignedClassExpressionShadowing(target=es2015).errors.txt
index.js(7,1): error TS2741: Property 'Another' is missing in type 'typeof Q' but required in type 'typeof Q'.
index.js(7,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
index.js(7,1): error TS4082: Default export of the module has or is using private name 'Q'.


==== index.js (3 errors) ====
    class A {
        member = new Q();
    }
    class Q {
        x = 42;
    }
    module.exports = class Q {
    ~~~~~~~~~~~~~~
!!! error TS2741: Property 'Another' is missing in type 'typeof Q' but required in type 'typeof Q'.
!!! related TS2728 index.js:12:1: 'Another' is declared here.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
        constructor() {
    ~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~
            this.x = new A();
    ~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    ~~~~~
    }
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    ~
!!! error TS4082: Default export of the module has or is using private name 'Q'.
    module.exports.Another = Q;
    